Conectar formulario a API VPS con Telegram

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         </div>
                     </div>
 
-                    <form class="contact-form">
+                    <form id="formulario-contacto" class="contact-form">
                         <div class="form-group">
                             <input type="text" placeholder="Nombre" required>
                         </div>
